--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1 class="large">工芸大</h1>
-    <img src="Untitled.png" alt="工芸大サイトのトレース"class="animate__animated animate__bounce">An animated element>
+    <img src="Untitled.png" alt="工芸大サイトのトレース"class="animate__animated animate__rubberBand">
     
     
 </body>
